--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Warung Makanan Seger</title>
-  <link rel="stylesheet" href="coba.css">
+  <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
   <div class="container">
@@ -19,36 +19,11 @@
     <div class="box list-table-box">
       <h3>Menu Unggulan Kami</h3>
       <ul>
-        <li>
-          <div class="item">
-            <img src="nasgor.jpg" alt="Nasi Goreng Seafood" width="100" height="100">
-            <span>Nasi Goreng Seafood</span>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <img src="chicken.jpg" alt="Ayam Goreng Crispy" width="100" height="100">
-            <span>Ayam Goreng Crispy</span>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <img src="sop.jpg" alt="Sop Ikan Segar" width="100" height="100">
-            <span>Sop Ikan Segar</span>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <img src="mieayam.jpg" alt="Mie Ayam Spesial" width="100" height="100">
-            <span>Mie Ayam Spesial</span>
-          </div>
-        </li>
-        <li>
-          <div class="item">
-            <img src="kelamud.jpg" alt="Es Kelapa Muda" width="100" height="100">
-            <span>Es Kelapa Muda</span>
-          </div>
-        </li>
+        <li>Nasi Goreng Seafood</li>
+        <li>Ayam Goreng Crispy</li>
+        <li>Sop Ikan Segar</li>
+        <li>Mie Ayam Spesial</li>
+        <li>Es Kelapa Muda</li>
       </ul>
       <table>
         <thead>
