menghapus wrap ketiga

--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
     </div>
     <div class="box paragraph-box">
       <p>Warung Makanan Seger menyajikan berbagai hidangan lezat dan bergizi untuk Anda nikmati. Kami menggunakan bahan-bahan segar dan berkualitas dalam setiap hidangan kami untuk memberikan pengalaman kuliner yang memuaskan bagi pelanggan kami.</p>
-      <p>Di Warung Makanan Seger, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami, mulai dari hidangan tradisional hingga masakan internasional yang dipadukan dengan cita rasa lokal yang autentik.</p>
-      <p>Jangan ragu untuk datang ke Warung Makanan Seger jika Anda mencari tempat makan yang menyajikan makanan segar dan lezat dengan harga terjangkau. Kami siap menyambut dan melayani Anda dengan sepenuh hati!</p>
-    </div>
-    <div class="box list-table-box">
-      <h3>Menu Unggulan Kami</h3>
+      <p>Di Warung Makanan Seger, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami, mulai dari hidangan tradisional hingga masakan internasional yang dipadukan dengan cita rasa lokal yang autentik. Berikut adalah beberapa menu unggulan kami:</p>
       <ul>
         <li>Nasi Goreng Seafood</li>
         <li>Ayam Goreng Crispy</li>
@@ -25,38 +21,9 @@
         <li>Mie Ayam Spesial</li>
         <li>Es Kelapa Muda</li>
       </ul>
-      <table>
-        <thead>
-          <tr>
-            <th>Menu</th>
-            <th>Harga</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Nasi Goreng Seafood</td>
-            <td>Rp 25.000</td>
-          </tr>
-          <tr>
-            <td>Ayam Goreng Crispy</td>
-            <td>Rp 20.000</td>
-          </tr>
-          <tr>
-            <td>Sop Ikan Segar</td>
-            <td>Rp 30.000</td>
-          </tr>
-          <tr>
-            <td>Mie Ayam Spesial</td>
-            <td>Rp 22.000</td>
-          </tr>
-          <tr>
-            <td>Es Kelapa Muda</td>
-            <td>Rp 10.000</td>
-          </tr>
-        </tbody>
-      </table>
-      <button onclick="showAlert()">Pesan Sekarang</button>
+      <p>Anda dapat memesan salah satu dari menu-menu tersebut dengan mengklik tombol "Pesan Sekarang" di bawah ini.</p>
     </div>
+    <button class="pesan-button" onclick="showAlert()">Pesan Sekarang</button>
   </div>
 
   <script>
