--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </ul>
       <p>Anda dapat memesan salah satu dari menu-menu tersebut dengan mengklik tombol "Pesan Sekarang" di bawah ini.</p>
     </div>
+    <img src="warung.jpg" alt="Gambar Makanan" class="food-image">
     <button class="pesan-button" onclick="showAlert()">Pesan Sekarang</button>
   </div>
 
