--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <p>Warung Makanan Seger menyajikan berbagai hidangan lezat dan bergizi untuk Anda nikmati. Kami menggunakan bahan-bahan segar dan berkualitas dalam setiap hidangan kami untuk memberikan pengalaman kuliner yang memuaskan bagi pelanggan kami.</p>
       <p>Di Warung Makanan Seger, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami, mulai dari hidangan tradisional hingga masakan internasional yang dipadukan dengan cita rasa lokal yang autentik. Berikut adalah beberapa menu unggulan kami:</p>
       <ul>
-        <li>Nasi Goreng Seafood</li>
-        <li>Ayam Goreng Crispy</li>
-        <li>Sop Ikan Segar</li>
-        <li>Mie Ayam Spesial</li>
-        <li>Es Kelapa Muda</li>
+        <li>- Nasi Goreng Seafood</li>
+        <li>- Ayam Goreng Crispy</li>
+        <li>- Sop Ikan Segar</li>
+        <li>- Mie Ayam Spesial</li>
+        <li>- Es Kelapa Muda</li>
       </ul>
       <p>Anda dapat memesan salah satu dari menu-menu tersebut dengan mengklik tombol "Pesan Sekarang" di bawah ini.</p>
     </div>
