--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Warung Makanan Seger</title>
+  <title>Warung Makan Anggia</title>
   <link rel="stylesheet" href="stylee.css">
 </head>
 <body>
   <div class="container">
     <div class="box title-box">
-      <h2>Selamat Datang di Warung Makanan Seger</h2>
+      <h2>Selamat Datang di Warung Makan Anggia/h2>
     </div>
     <div class="box paragraph-box">
-      <p>Warung Makanan Seger menyajikan berbagai hidangan lezat dan bergizi untuk Anda nikmati. Kami menggunakan bahan-bahan segar dan berkualitas dalam setiap hidangan kami untuk memberikan pengalaman kuliner yang memuaskan bagi pelanggan kami.</p>
-      <p>Di Warung Makanan Seger, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami, mulai dari hidangan tradisional hingga masakan internasional yang dipadukan dengan cita rasa lokal yang autentik. Berikut adalah beberapa menu unggulan kami:</p>
+      <p>Warung Makan Anggia menyajikan berbagai hidangan lezat dan bergizi untuk Anda nikmati. Kami menggunakan bahan-bahan segar dan berkualitas dalam setiap hidangan kami untuk memberikan pengalaman kuliner yang memuaskan bagi pelanggan kami.</p>
+      <p>Di Warung Makanan Seger, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami. Berikut adalah beberapa menu unggulan kami:</p>
       <ul>
         <li>- Nasi Goreng Seafood</li>
         <li>- Ayam Goreng Crispy</li>
@@ -29,7 +29,7 @@
 
   <script>
     function showAlert() {
-      alert("Terima kasih telah memesan di Warung Makanan Seger. Kami akan segera menyiapkan pesanan Anda!");
+      alert("Hubungi 08123456789 untuk pemesanan!");
     }
   </script>
 </body>
