--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <div class="container">
     <div class="box title-box">
-      <h2>Selamat Datang di Warung Makan Anggia/h2>
+      <h2>Selamat Datang di Warung Makan Anggia </h2>
     </div>
     <div class="box paragraph-box">
       <p>Warung Makan Anggia menyajikan berbagai hidangan lezat dan bergizi untuk Anda nikmati. Kami menggunakan bahan-bahan segar dan berkualitas dalam setiap hidangan kami untuk memberikan pengalaman kuliner yang memuaskan bagi pelanggan kami.</p>
-      <p>Di Warung Makanan Seger, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami. Berikut adalah beberapa menu unggulan kami:</p>
+      <p>Di Warung Makan Anggia, kami mengutamakan rasa, kualitas, dan kebersihan dalam setiap sajian kami. Nikmati berbagai menu spesial kami. Berikut adalah beberapa menu unggulan kami:</p>
       <ul>
         <li>- Nasi Goreng Seafood</li>
         <li>- Ayam Goreng Crispy</li>
@@ -23,7 +23,36 @@
       </ul>
       <p>Anda dapat memesan salah satu dari menu-menu tersebut dengan mengklik tombol "Pesan Sekarang" di bawah ini.</p>
     </div>
-    <img src="warung.jpg" alt="Gambar Makanan" class="food-image">
+    <table class="menu-table">
+      <thead>
+        <tr>
+          <th>Menu</th>
+          <th>Harga</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Nasi Goreng Seafood</td>
+          <td>Rp 25.000</td>
+        </tr>
+        <tr>
+          <td>Ayam Goreng Crispy</td>
+          <td>Rp 20.000</td>
+        </tr>
+        <tr>
+          <td>Sop Ikan Segar</td>
+          <td>Rp 30.000</td>
+        </tr>
+        <tr>
+          <td>Mie Ayam Spesial</td>
+          <td>Rp 22.000</td>
+        </tr>
+        <tr>
+          <td>Es Kelapa Muda</td>
+          <td>Rp 10.000</td>
+        </tr>
+      </tbody>
+    </table>
     <button class="pesan-button" onclick="showAlert()">Pesan Sekarang</button>
   </div>
 
