--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </tr>
       </tbody>
     </table>
+    <img src="warung.jpg" alt="Gambar Warung" class="warung-image">
     <button class="pesan-button" onclick="showAlert()">Pesan Sekarang</button>
   </div>
 
