--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li>- Mie Ayam Spesial</li>
         <li>- Es Kelapa Muda</li>
       </ul>
-      <p>Anda dapat memesan salah satu dari menu-menu tersebut dengan mengklik tombol "Pesan Sekarang" di bawah ini.</p>
+      <p>Daftar harga menu di atas dapat Anda lihat pada tabel di bawah. Anda dapat memesan salah satu dari menu-menu tersebut dengan mengklik tombol "Pesan Sekarang" di bawah ini.</p>
     </div>
     <table class="menu-table">
       <thead>
